Refactor database classes
Refactor database classes, use Postgres generated columns, update Markdown code, arbitrary image multipliers, PageSpeed Insights optimizations